--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,6 +8,11 @@ on:
 
 
 jobs:
+#  deployment:
+#    runs-on: ubuntu-latest
+#    environment:
+#      name: deploy
+
   build:
     runs-on: ubuntu-latest
 
@@ -53,8 +58,8 @@ jobs:
         with:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          application_name: blood-donation-server
-          environment_name: Blooddonationserver-env
+          application_name: blood-donation-new
+          environment_name: Blooddonationnew-env
           version_label: github-action-${{steps.current-time.outputs.formattedTime}}
           region: ap-northeast-2
           deployment_package: deploy/deploy.zip
