--- a/.platform/nginx/nginx.conf
+++ b/.platform/nginx/nginx.conf
@@ -9,7 +9,6 @@ events {
     worker_connections  1024;
 }
 
-
 http {
   include       /etc/nginx/mime.types;
   default_type  application/octet-stream;
@@ -32,6 +31,11 @@ http {
   server {
       listen        80 default_server;
 
+      add_header  'Access-Control-Allow-Origin'  '127.0.0.1:5000';
+      add_header  'Access-Control-Allow-Origin'  'example.com';
+      add_header  'Access-Control-Allow-Credentials'  'true';
+
+
       location / {
           proxy_pass          http://springboot;
           proxy_http_version  1.1;
@@ -45,9 +49,9 @@ http {
 
       access_log    /var/log/nginx/access.log main;
 
-      client_header_timeout 80;
-      client_body_timeout   80;
-      keepalive_timeout     110;
+      client_header_timeout 60;
+      client_body_timeout   60;
+      keepalive_timeout     60;
       gzip                  off;
       gzip_comp_level       4;
 
